@@ -1,4 +1,4 @@
-# $Id: RMagick.rb,v 1.34 2005/10/17 22:17:38 rmagick Exp $
+# $Id: RMagick.rb,v 1.35 2005/12/22 16:11:11 rmagick Exp $
 #==============================================================================
 #                  Copyright (C) 2005 by Timothy P. Hunter
 #   Name:       RMagick.rb
@@ -636,6 +636,21 @@ class Image
         end
         self
     end
+
+	# Force an image to exact dimensions without changing the aspect ratio.
+	# Resize and crop if necessary. (Thanks to Jerett Taylor!)
+	def crop_resized(ncols, nrows, gravity=CenterGravity)
+        copy.crop_resized!(ncols, nrows, gravity)
+    end
+
+	def crop_resized!(ncols, nrows, gravity=CenterGravity)
+		if ncols != columns || nrows != rows
+		    scale = [ncols/columns.to_f, nrows/rows.to_f].max
+			resize!(scale*(columns+0.5), scale*(rows+0.5))
+		end
+	    crop!(gravity, ncols, nrows, true) if ncols != columns || nrows != rows
+	    self
+	end
 
     # Used by ImageList methods - see ImageList#cur_image
     def cur_image
